--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <td><img src="images/ipinto2.png"></td>
         <td><h1>Iolanda Pinto</h1>
           <p><em>Quality Control Agent in <strong><a href="https://www.iberinform.pt/empresa/24951709/absolut-formula-lda">Absolut Formula</a>.</strong></em></p>
-          <p>I am a quality control agent, that needs to listen calls and evaluate them. I love to travel and I am learning a new skill.</p></td>
+          <p>I am a quality control agent, that needs to listen calls and evaluate them.</p>
+          <p>I love to travel and I am learning a new skill.</p>
+        </td>
       </tr>
     </table>
     <hr>
@@ -18,6 +20,7 @@
     <ul>
       <li>Secundary School of Montemor o Novo</li>
       <li><strong><a href="https://cefad.pt/">Cefad</a></strong> Technical Sports Course</li>
+      <li><strong><a href="https://empower-up.pt/">Empower-Up</a></strong>Veterinarian Assistant Course</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
