--- a/Contacts.html
+++ b/Contacts.html
@@ -6,10 +6,9 @@
 </head>
 <body>
     <h1>My Contacts</h1>
-    <p>Morada fictícia</p>
-    <p>351999222888</p>
-    <p>myemail@hotmail.com</p>
-    <p>myemail@gmail.com</p>
+    <p>Casa Branca</p>
+    <p>35196*******</p>
+    <p>iolandarobin@gmail.com</p>
     <hr>
     <form action="mailto:iolandarobin@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
